[project]
name = "comfy_kepliststuff"
description = "Nodes: Range(Step), Range(Num Steps), List Length, Image Overlay, Stack Images, Empty Images, Join Image Lists, Join Float Lists. This extension provides various list manipulation nodes"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/M1kep/Comfy_KepListStuff"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfy_KepListStuff"
Icon = ""
